Removed common-codecs dependency
-200 KB of resulting file size